--- a/fks/pubspec.yaml
+++ b/fks/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_restart: ^0.0.3
   flutter_phoenix: ^1.0.0
   alert: ^2.0.1
+  flutter_bloc: ^7.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
